--- a/src/app/movement/barcode.component.html
+++ b/src/app/movement/barcode.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 
     <div class="noprint">
-        <button pButton type="button" title="{{ 'Back' | translate }}" (click)="cancelClick()" class="ui-button-secondary" style="width:50px" icon="pi pi-upload"></button>
+        <button pButton type="button" title="{{ 'Back' | translate }}" (click)="cancelClick()" class="ui-button-secondary" style="width:50px" icon="pi pi-arrow-left"></button>
         <button pButton type="button" label="{{ 'PDF' | translate }}" [disabled]="isBusy" (click)="pdfClick()" class="ui-button-secondary" icon="pi pi-file"></button>
     </div>
     <br/><br/>
