--- a/src/app/movement/document.component.html
+++ b/src/app/movement/document.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 
     <div class="noprint">
-        <button pButton type="button" title="{{ 'Back' | translate }}" (click)="cancelClick()" class="ui-button-secondary" style="width:50px" icon="pi pi-upload"></button>
+        <button pButton type="button" title="{{ 'Back' | translate }}" (click)="cancelClick()" class="ui-button-secondary" style="width:50px" icon="pi pi-arrow-left"></button>
         <button pButton type="button" label="{{ 'Print' | translate }}" title="Print document" (click)="printClick()" class="ui-button-secondary" icon="pi pi-print"></button>
         <button pButton type="button" label="{{ 'PDF' | translate }}" (click)="pdfClick()" [disabled]="isBusy" class="ui-button-secondary" icon="pi pi-file"></button>
         <button pButton type="button" label="{{ 'Send mail' | translate }}" (click)="sendMailClick()" [disabled]="isBusy" class="ui-button-secondary" icon="pi pi-comment"></button>
