--- a/src/app/setting/company.component.html
+++ b/src/app/setting/company.component.html
@@ -63,11 +63,6 @@
                 </div>
             </div>
         </div>
-        <p-accordion>
-            <p-accordionTab header="{{ 'Description' | translate }}" [selected]="true">
-                <app-translation *ngIf="countries" [(translations)]="company.companyDescription"></app-translation>
-            </p-accordionTab>
-        </p-accordion>
     </p-tabPanel>
     <p-tabPanel header="{{ 'Contacts' | translate }}">
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
@@ -105,6 +100,14 @@
                 </div>
             </div>
         </div>
+    </p-tabPanel>
+    <p-tabPanel header="{{ 'SEO' | translate }}">
+        <app-seo [(seo)]="company.companySeo" [path]="'info'"></app-seo>
+        <p-accordion>
+            <p-accordionTab header="{{ 'Description' | translate }}" [selected]="true">
+                <app-translation *ngIf="countries" [(translations)]="company.companyDescription" [rows]="30"></app-translation>
+            </p-accordionTab>
+        </p-accordion>
     </p-tabPanel>
     <p-tabPanel header="{{ 'Barcode' | translate }}">
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
