--- a/src/app/shared/translation.component.html
+++ b/src/app/shared/translation.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="ui-grid-row">
         <div class="ui-grid-col-12">
-            <textarea pInputTextarea [rows]="5" [(ngModel)]="translation.value"></textarea>
+            <textarea pInputTextarea [rows]="rows" [(ngModel)]="translation.value"></textarea>
         </div>
     </div>
 </div>
