--- a/src/app/shared/seo.component.html
+++ b/src/app/shared/seo.component.html
@@ -2,12 +2,14 @@
     <div class="ui-grid-row">
         <div class="ui-grid-col-4"><label>{{ 'Permalink' | translate }}</label></div>
         <div class="ui-grid-col-8">
-            <div *ngIf="path !== 'info'" class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">/{{ path }}/&nbsp;</span>
-                <input pInputText type="text" [(ngModel)]="seo.permalink"/>
-            </div>
-            <div *ngIf="path === 'info'" class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">/{{ path }}</span>
+            <div class="ui-inputgroup">
+                <ng-template [ngIf]="path === 'info' || path === ''" [ngIfElse]="notShow">
+                    <span class="ui-inputgroup-addon">/{{ path }}</span>
+                </ng-template>  
+                <ng-template #notShow>
+                    <span class="ui-inputgroup-addon">/{{ path }}/&nbsp;</span>
+                    <input pInputText type="text" [(ngModel)]="seo.permalink"/>
+                </ng-template>
             </div>
         </div>
     </div>
