--- a/src/app/attribute/attributevalue.component.html
+++ b/src/app/attribute/attributevalue.component.html
@@ -53,6 +53,7 @@
                     </div>
                 </div>
                 <app-translation [(translations)]="selectedValue.translations"></app-translation>                            
+                <app-media [(media)]="selectedValue.media"></app-media>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-6">
                         <button *ngIf="selectedValue.attributeValueId>0" type="button" pButton icon="pi pi-trash" class="ui-button-secondary" (click)="deleteValueClick()" label="{{ 'Delete' | translate }}"></button>
