--- a/src/app/attribute/attributevalue.component.html
+++ b/src/app/attribute/attributevalue.component.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <app-translation [(translations)]="selectedValue.translations"></app-translation>                            
+                <app-translation [(translations)]="selectedValue.translations" [style]="{'height':'100px'}"></app-translation>                            
                 <app-media [(media)]="selectedValue.media"></app-media>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-6">
