--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <app-translation [(translations)]="selected.translations"></app-translation>
+                <app-translation [(translations)]="selected.translations" [style]="{'height':'100px'}"></app-translation>
             </div>
         </form>
         </p-tabPanel>
