--- a/src/app/shared/translation.component.html
+++ b/src/app/shared/translation.component.html
@@ -9,8 +9,8 @@
     </div>
     <div class="ui-grid-row">
         <div class="ui-grid-col-12">
-            <!-- <textarea pInputTextarea [rows]="rows" [(ngModel)]="translation.value"></textarea> -->
-            <p-editor [(ngModel)]="translation.value" [style]="style"></p-editor>
+            <textarea *ngIf="!style" pInputTextarea rows="5" [(ngModel)]="translation.value"></textarea>
+            <p-editor *ngIf="style" [(ngModel)]="translation.value" [style]="style"></p-editor>
         </div>
     </div>
 </div>
