Fix optional property

--- a/src/app/product/detail.component.html
+++ b/src/app/product/detail.component.html
@@ -30,7 +30,7 @@
     <app-discount [discount]="selected.discount"></app-discount>
 </p-accordionTab>
 <p-accordionTab header="{{ 'Packaging' | translate }}">
-    <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid">
+    <div *ngIf="selected.packaging" class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid">
         <div class="ui-grid-row">
             <div class="ui-grid-col-4"><label for="weight">{{ 'Weight' | translate }}</label></div>
             <div class="ui-grid-col-8">
