--- a/src/app/shared/seo.component.html
+++ b/src/app/shared/seo.component.html
@@ -1,3 +1,4 @@
+<button *ngIf="!seo" type="button" pButton icon="pi pi-plus" (click)="addClick()" label="{{ 'Add' | translate }}"></button>
 <div *ngIf="seo" class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid">
     <div class="ui-grid-row">
         <div class="ui-grid-col-4"><label>{{ 'Permalink' | translate }}</label></div>
